--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,14 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Editor directories and files
+.idea
+.vscode
+
+# Local unworking file
+package-lock.json
+node_modules
+.DS_Store
+dist
+*.local
