--- a/package.json
+++ b/package.json
@@ -8,22 +8,30 @@
   },
   "author": "",
   "license": "ISC",
+  "_moduleAliases": {
+    "src": "src"
+  },
   "dependencies": {
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
+    "@koa/multer": "^3.0.2",
     "@koa/router": "^13.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^22.5.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
+    "module-alias": "^2.2.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
