--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
+    "NeteaseCloudMusicApi": "^4.22.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
